# feup-23_24

./: .gitignore  .gitmodules  README.md
DA/week2/da2324_p01_student/: CMakeLists.txt
DA/week3/da2324_p02_student/: CMakeLists.txt
DA/week3/da2324_p02_student/TP2/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp
DA/week4/da2324_p03_student/: CMakeLists.txt
DA/week4/da2324_p03_student/TP3/: MSTTestAux.h  ex1.cpp  ex2.cpp  ex3.cpp
DA/week4/da2324_p03_student/data_structures/: Graph.h
DA/week5/da2324_p04_student/: CMakeLists.txt
DA/week5/da2324_p04_student/TP4/: ex1.cpp  ex2.cpp  ex4.cpp  ex6.cpp  ex9.cpp  exercises.h
DA/week5/da2324_p04_student/running_examples/closest_point_pair/: ClosestPointPair.cpp
FSI/: .bashrc
FSI/GitLab GroupWork/: LOGBOOK2.md
FSI/GitLab_GroupWork/: LOGBOOK4.md  README.md
FSI/Week10/CTF/: CTF10.md  cipherspec.py
FSI/Week10/LAB/: LOGBOOK10.md
FSI/Week11/CTF/: CTF11.md  challenge.py  scriptedPrime.py
FSI/Week11/LAB/: LOGBOOK11.md
FSI/Week3/Wordpress CTF/: LOGBOOK.md  Wordpress version 5.8.1 → Bypass Vu.txt  exploit_CVE-2021-34646.py
FSI/Week4/Lab/: LOGBOOK.md
FSI/Week7/: String Specifiers
FSI/Week8/CTF/: CTF8.md
FSI/Week8/seed-labs-Web_SQL_Injection/: Solution.txt
FSI/Week9/LAB/: LOGBOOK10.md
IADP/PYQuizzes/Q7-10/: 1.py  2.py
IPC/OtherWorkEx/: ipc-phase1-T03-G03-Eventive-report.docx
IPC/documents/: IPC.md  SexEdPro Mockup.xd
LCOM/lab0/: .gitignore  hello.c
LCOM/lab2/: lab2.c  timer.c  utils.c
LTW/week2/1.OnlineNewspaper/: all.html  article.html  section.html
LTW/week2/2.ComplexTable/: table.html
LTW/week2/3.Form/: form.html
LTW/week3/: recipes.html  styles.css
LTW/week4/: layout.css  responsive.css  style.css
LTW/week6/1/: form2.html  result.php  sum2.php
PFL/Haskell/P02/: 2.hi
PFL/Haskell/P03/: sheet3.hs
PFL/MT1/: 1.pl
PFL/P01/: 1.pl  2.pl  3.pl
PFL/P02/1/: a.pl
PFL/P03/2/: a.pl
PFL/P04/: 1.prolog  2.prolog  4.prolog
PFL/P04/5/: a.prolog
PRACTICE/: README.md
PRACTICE/Java/: ArrayDiff.java  ArraySum.java  Bob.java  Camel.java  Cockroach.java  Positive.java  Winner.java
RCOM/TP1_TP2/: read_noncanonical.c  write_noncanonical.c
SO/Sheet#0/: f1.txt  f2.txt  q2.txt  trees.txt
(+282 files in other folders)
